Remove UseTinyClassPointers; Make Lilliput-specific jsa gen optional